--- a/home.html
+++ b/home.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="logo.png">
+    <link rel="shortcut icon" type="image/png" href="images/logo.png">
     <title>MyCohort</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
@@ -34,7 +34,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <img class="MyCohort" src="myCohort.png" alt="MyCohort" class="logo">
+                    <img class="MyCohort" src="images/MyCohort.png" alt="MyCohort" class="logo">
                 </nav>
             </div>
         </div>
