--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="images/logo.png">
+    <link rel="shortcut icon" type="image/png" href="images/minilogo.png">
     <title>MyCohort</title>
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -19,9 +19,7 @@
                     <div class="bg-dark p-4">
                         <a class="text-white h4 p-1" href="home.html">Home</a>
                         <br>
-                        <a class="text-white h4">Announcements</a>
-                        <br>
-                        <a class="text-white h4">Grades</a>
+                        <a class="text-white h4">Messages</a>
                         <br>
                         <a class="text-white h4">Extra-Curricular Oppurtunities</a>
                         <br>
@@ -34,7 +32,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <img class="MyCohort" src="images/MyCohort.png" alt="MyCohort" class="logo">
+                    <img class="MyCohort" src="images/logo1.png" alt="MyCohort" class="logo">
                 </nav>
             </div>
         </div>
@@ -48,14 +46,14 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="Code.jpg" class="d-block w-100" alt="...">
+                    <img src="images/Code.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Ministry of Education introduces new class curriculum</h5>
                         <p>Now students in elementary school will be taught coding and personal finanace!</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="DECA.jpg" class="d-block w-100" alt="...">
+                    <img src="images/DECA.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>DECA Provincials Meeting</h5>
                         <p>Meeting for all students attending DECA Provincials in room 118 at 2:30.</p>
