Linked all The HTML I MADE

--- a/messages.html
+++ b/messages.html
@@ -19,7 +19,7 @@
                         <div class="bg-dark p-4">
                             <a class="text-white h4 p-1" href="home.html">Home</a>
                             <br>
-                            <a class="text-white h4">Messages</a>
+                            <a class="text-white h4" href = "messages.html">Messages</a>
                             <br>
                             <a class="text-white h4" href = "opportunities.html">Extra-Curricular Opportunities</a>
                             <br>
