changes to link

--- a/signup.html
+++ b/signup.html
@@ -44,7 +44,7 @@
             <p>Already a Member? <a href='login.html'> Sign In!</a></p>
         </div>
     </div>
-    <script src='script.js'></script>
+    <script src='js/script.js'></script>
 </body>
 
 </html>
