--- a/home.html
+++ b/home.html
@@ -33,6 +33,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <img class="MyCohort" src="images/logo1.png" alt="MyCohort" class="logo">
+                    <a class="text-white h3" href="login.html">Logout</a>
                 </nav>
             </div>
         </div>
@@ -60,10 +61,10 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <img src="images/hackathon.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        <h5>New Hackathon Alert</h5>
+                        <p>Presenting BridgeHacks! A hackathon open to everybody!</p>
                     </div>
                 </div>
             </div>
