--- a/Main.html
+++ b/Main.html
@@ -15,7 +15,7 @@
     <header>
         <div class="whole">
             <div class="logo">
-                <img src="logo1.png" alt="">
+                <img src="images/logo1.png" alt="">
 
             </div>
             <ul class="nav">
