--- a/login.html
+++ b/login.html
@@ -27,6 +27,7 @@
         </div>
         <p id="error-message"></p>
         <button class="btn btn-primary" id="next-button">Next</button>
+        <a href='home.html'><button class='btn-2' id='homepage'>Go Home</button></a>
         <div id="back-button">&#8592;</div>
         <div class="info-section">
             <p>Need an Account?</p>
