--- a/messages.html
+++ b/messages.html
@@ -13,26 +13,27 @@
     </head>
     <body>
         <header>
-            <div class="container-fluid p-0">
+            <div class="container-fluid p-0" id="header">
                 <div>
                     <div class="collapse" id="navbarToggleExternalContent">
-                        <div class="bg-dark p-4">
-                            <a class="text-white h4 p-1" href="home.html">Home</a>
+                        <div class="topDown p-4" style="background-color: #031a3d;">
+                            <a class="text-white h4" href="home.html">Home</a>
                             <br>
-                            <a class="text-white h4" href = "messages.html">Messages</a>
+                            <a class="text-white h4" href="messages.html">Messages</a>
                             <br>
-                            <a class="text-white h4" href = "opportunities.html">Extra-Curricular Opportunities</a>
+                            <a class="text-white h4" href="opportunities.html">Extra-Curricular Oppurtunities</a>
                             <br>
-                            <a class="text-white h4" href = "finances.html">Finances</a>
+                            <a class="text-white h4" href="finances.html">Finances</a>
                         </div>
                     </div>
-                    <nav class="navbar navbar-dark bg-dark" id="navbar">
+                    <nav class="navbar navbar-light" style="background-color: #ffbd59;">
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <img class="MyCohort" src="images/logo1.png" alt="MyCohort" class="logo">
+                        <a href="Main.html"><button type="button" class="btn btn-danger">LOGOUT</button></a>
                     </nav>
                 </div>
             </div>
