--- a/home.html
+++ b/home.html
@@ -77,6 +77,14 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+        <div class="jumbotron jumbotron-fluid" id="calendar">
+            <div class="container">
+                <h1 class="display-4">Schedule:</h1>
+                <iframe
+                    src="https://calendar.google.com/calendar/embed?src=49jp1omqhqjuvs2hmr6if0tl6s%40group.calendar.google.com&ctz=America%2FToronto"
+                    style="border:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            </div>
+        </div>
     </main>
     <footer>
 
