DID SOME MORE SHIT

--- a/messages.html
+++ b/messages.html
@@ -91,6 +91,31 @@
                 </div>
             </div>
         </div>
+        
+        <footer>
+            <div class = "container-fluid">
+                <div class = "row" id = "socialRow">
+                    <div class = "pictures col-1">
+                    <div>
+                        <img class = "social"src  ="images/twitter.png">
+                    </div>
+                    <div >
+                        <img class = "social"src  ="images/Instagram.webp">
+                    </div>
+                    <div >
+                        <img class = "social" src  ="images/Linkedin.png">
+                    </div>
+                    </div>
+                    <div class = "words col-11">
+                        <h3>About Us</h3>
+                        A centralized hub for students in highschool and post-secondary institutions. Keep up with your coursework, school related finances and find more extra-curricular activities all at one place. 
+                        <br>
+                        <label for='email-input'>Subscribe to Our Newsletter</label>
+                        <input id='email-input' class='form-control' type='text' placeholder="name@email.com">
+                    </div>
+                </div>
+            </div>
+        </footer>
     
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
