--- a/finances.html
+++ b/finances.html
@@ -112,22 +112,15 @@
                         <img class = "social"src  ="images/Instagram.webp">
                     </div>
                     <div >
-                        <img class = "social"src  ="images/facebook.png">
-                    </div>
-                    <div >
                         <img class = "social" src  ="images/Linkedin.png">
                     </div>
-                    <div >
-                        <img class = "social" src  ="images/youtube.png">
                     </div>
-                    </div>
-                    <div class = "words col-6">
+                    <div class = "words col-11">
                         <h3>About Us</h3>
                         A centralized hub for students in highschool and post-secondary institutions. Keep up with your coursework, school related finances and find more extra-curricular activities all at one place. 
-                    </div>
-                    <div class = "col-lg-5 email">
+                        <br>
                         <label for='email-input'>Subscribe to Our Newsletter</label>
-                        <input id='email-input' class='form-control' type='text'>
+                        <input id='email-input' class='form-control' type='text' placeholder="name@email.com">
                     </div>
                 </div>
             </div>
