--- a/opportunities.html
+++ b/opportunities.html
@@ -5,7 +5,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Cohort | OPPORTUNITIES </title>
+        <link rel="shortcut icon" type="image/png" href="images/minilogo.png">
+        <title>Opportunities</title>
         <link rel="stylesheet" href="css/overall.css">
         <link rel="stylesheet" href="css/home.css">
         <!-- Bootstrap CSS -->
